[gd_scene load_steps=16 format=3 uid="uid://de7qapkqfycxl"]

[ext_resource type="Script" path="res://maze/maze.gd" id="1_5tj6t"]
[ext_resource type="Texture2D" uid="uid://cmluhlnej5ph7" path="res://maze/wall.png" id="1_6siva"]
[ext_resource type="Script" path="res://maze/tile_map.gd" id="2_iktcb"]
[ext_resource type="PackedScene" uid="uid://djdusma0xk4g5" path="res://maze/player/player.tscn" id="3_ifcoo"]
[ext_resource type="PackedScene" uid="uid://quaxv3d7v3vo" path="res://maze/collectible/collectible.tscn" id="4_3l0se"]
[ext_resource type="PackedScene" uid="uid://biam20w3im8om" path="res://maze/collectible/pop_up.tscn" id="6_rpku6"]
[ext_resource type="PackedScene" uid="uid://ds4gexgp7d4so" path="res://maze/win_area.tscn" id="7_ofevf"]
[ext_resource type="FontFile" uid="uid://dwjftoa7547xl" path="res://fonts/dogicapixelbold.ttf" id="8_rxaqk"]
[ext_resource type="Texture2D" uid="uid://dngae1paaojsk" path="res://maze/collectible/art/IMG_1399.PNG" id="9_irlio"]
[ext_resource type="FontFile" uid="uid://dad653sjnvr6f" path="res://fonts/dogicapixel.ttf" id="10_dq0ov"]
[ext_resource type="PackedScene" uid="uid://d3hmpdwpgbs7i" path="res://maze/timer.tscn" id="11_7vdwk"]
[ext_resource type="PackedScene" uid="uid://bimltlhk38hjj" path="res://maze/end_scene/end_scene.tscn" id="12_illfs"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_on5ov"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_28pi3"]
texture = ExtResource("1_6siva")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_xqlka"]
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_on5ov")
sources/1 = SubResource("TileSetAtlasSource_28pi3")

[node name="World" type="Node2D"]
position = Vector2(3, 0)
scale = Vector2(3, 3)
script = ExtResource("1_5tj6t")

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource("TileSet_xqlka")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(0, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 720896, 1, 0, 786432, 1, 0, 851968, 1, 0, 1048576, 1, 0, 1114112, 1, 0, 1179648, 1, 0, 1245184, 1, 0, 1310720, 1, 0, 1376256, 1, 0, 1441792, 1, 0, 1507328, 1, 0, 1572864, 1, 0, 1638400, 1, 0, 1703936, 1, 0, 1769472, 1, 0, 1835008, 1, 0, 1900544, 1, 0, 1966080, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 15, 1, 0, 16, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0, 655360, 1, 0, 917504, 1, 0, 983040, 1, 0, 2031616, 1, 0, 2031626, 1, 0, 2031634, 1, 0, 33, 1, 0, 34, 1, 0, 35, 1, 0, 36, 1, 0, 37, 1, 0, 38, 1, 0, 39, 1, 0, 40, 1, 0, 41, 1, 0, 42, 1, 0, 43, 1, 0, 44, 1, 0, 45, 1, 0, 46, 1, 0, 47, 1, 0, 48, 1, 0, 49, 1, 0, 50, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 65546, 1, 0, 131082, 1, 0, 196618, 1, 0, 262154, 1, 0, 262158, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 589834, 1, 0, 655370, 1, 0, 720906, 1, 0, 786442, 1, 0, 786446, 1, 0, 851978, 1, 0, 917514, 1, 0, 983050, 1, 0, 1114122, 1, 0, 1179658, 1, 0, 1245194, 1, 0, 1310730, 1, 0, 1310735, 1, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1376266, 1, 0, 1376274, 1, 0, 1441802, 1, 0, 1441810, 1, 0, 1507338, 1, 0, 1507346, 1, 0, 1572874, 1, 0, 1572875, 1, 0, 1572876, 1, 0, 1572877, 1, 0, 1572878, 1, 0, 1572882, 1, 0, 1638418, 1, 0, 1703954, 1, 0, 1769490, 1, 0, 1835018, 1, 0, 1835019, 1, 0, 1835020, 1, 0, 1835021, 1, 0, 1835022, 1, 0, 1835026, 1, 0, 1900554, 1, 0, 1900562, 1, 0, 1966090, 1, 0, 1966098, 1, 0, 2097152, 1, 0, 2097153, 1, 0, 2097154, 1, 0, 2097155, 1, 0, 2097156, 1, 0, 2097157, 1, 0, 2097158, 1, 0, 2097159, 1, 0, 2097160, 1, 0, 2097161, 1, 0, 2097162, 1, 0, 2097163, 1, 0, 2097164, 1, 0, 2097165, 1, 0, 2097166, 1, 0, 2097167, 1, 0, 2097168, 1, 0, 2097169, 1, 0, 2097170, 1, 0, 2097171, 1, 0, 2097172, 1, 0, 2097173, 1, 0, 2097174, 1, 0, 2097175, 1, 0, 2097176, 1, 0, 2097177, 1, 0, 2097178, 1, 0, 2097179, 1, 0, 2097180, 1, 0, 2097181, 1, 0, 2097182, 1, 0, 2097183, 1, 0, 2097184, 1, 0, 2097185, 1, 0, 2097186, 1, 0, 2097187, 1, 0, 2097188, 1, 0, 2097189, 1, 0, 2097190, 1, 0, 2097191, 1, 0, 2097192, 1, 0, 2097193, 1, 0, 2097194, 1, 0, 2097195, 1, 0, 2097196, 1, 0, 2097197, 1, 0, 2097198, 1, 0, 2097199, 1, 0, 2097200, 1, 0, 2097201, 1, 0, 2097202, 1, 0, 786451, 1, 0, 1310739, 1, 0, 786452, 1, 0, 1310740, 1, 0, 786453, 1, 0, 1310741, 1, 0, 65558, 1, 0, 131094, 1, 0, 196630, 1, 0, 262166, 1, 0, 786454, 1, 0, 851990, 1, 0, 917526, 1, 0, 983062, 1, 0, 1048598, 1, 0, 1310742, 1, 0, 1572886, 1, 0, 1638422, 1, 0, 1703958, 1, 0, 1769494, 1, 0, 1835030, 1, 0, 262167, 1, 0, 786455, 1, 0, 1048599, 1, 0, 1835031, 1, 0, 786456, 1, 0, 1048600, 1, 0, 1835032, 1, 0, 786457, 1, 0, 1048601, 1, 0, 1835033, 1, 0, 262170, 1, 0, 786458, 1, 0, 1048602, 1, 0, 1114138, 1, 0, 1179674, 1, 0, 1245210, 1, 0, 1310746, 1, 0, 1376282, 1, 0, 1441818, 1, 0, 1507354, 1, 0, 1572890, 1, 0, 1638426, 1, 0, 1703962, 1, 0, 1769498, 1, 0, 1835034, 1, 0, 786459, 1, 0, 1835035, 1, 0, 786460, 1, 0, 1835036, 1, 0, 786461, 1, 0, 1835037, 1, 0, 524318, 1, 0, 786462, 1, 0, 1048606, 1, 0, 1310750, 1, 0, 1376286, 1, 0, 1441822, 1, 0, 1507358, 1, 0, 1572894, 1, 0, 1835038, 1, 0, 786463, 1, 0, 1048607, 1, 0, 1572895, 1, 0, 1835039, 1, 0, 786464, 1, 0, 1048608, 1, 0, 1572896, 1, 0, 1835040, 1, 0, 786465, 1, 0, 1048609, 1, 0, 1572897, 1, 0, 1835041, 1, 0, 262178, 1, 0, 327714, 1, 0, 393250, 1, 0, 458786, 1, 0, 524322, 1, 0, 786466, 1, 0, 1048610, 1, 0, 1114146, 1, 0, 1179682, 1, 0, 1245218, 1, 0, 1310754, 1, 0, 1572898, 1, 0, 1835042, 1, 0, 262179, 1, 0, 786467, 1, 0, 1310755, 1, 0, 1572899, 1, 0, 262180, 1, 0, 786468, 1, 0, 1310756, 1, 0, 1572900, 1, 0, 262181, 1, 0, 786469, 1, 0, 1310757, 1, 0, 1572901, 1, 0, 262182, 1, 0, 524326, 1, 0, 589862, 1, 0, 655398, 1, 0, 720934, 1, 0, 786470, 1, 0, 852006, 1, 0, 917542, 1, 0, 983078, 1, 0, 1048614, 1, 0, 1114150, 1, 0, 1179686, 1, 0, 1245222, 1, 0, 1310758, 1, 0, 1572902, 1, 0, 1638438, 1, 0, 1703974, 1, 0, 1769510, 1, 0, 1835046, 1, 0, 1900582, 1, 0, 1966118, 1, 0, 2031654, 1, 0, 262186, 1, 0, 327722, 1, 0, 393258, 1, 0, 458794, 1, 0, 524330, 1, 0, 786474, 1, 0, 1048618, 1, 0, 1114154, 1, 0, 1179690, 1, 0, 1245226, 1, 0, 1310762, 1, 0, 1376298, 1, 0, 1441834, 1, 0, 1507370, 1, 0, 1572906, 1, 0, 1638442, 1, 0, 1703978, 1, 0, 1769514, 1, 0, 1835050, 1, 0, 524331, 1, 0, 786475, 1, 0, 1310763, 1, 0, 1835051, 1, 0, 524332, 1, 0, 786476, 1, 0, 1310764, 1, 0, 1835052, 1, 0, 524333, 1, 0, 786477, 1, 0, 1310765, 1, 0, 1835053, 1, 0, 262190, 1, 0, 524334, 1, 0, 786478, 1, 0, 852014, 1, 0, 917550, 1, 0, 983086, 1, 0, 1048622, 1, 0, 1310766, 1, 0, 1572910, 1, 0, 1835054, 1, 0, 524335, 1, 0, 1048623, 1, 0, 1572911, 1, 0, 524336, 1, 0, 1048624, 1, 0, 1572912, 1, 0, 524337, 1, 0, 1048625, 1, 0, 1572913, 1, 0, 65586, 1, 0, 131122, 1, 0, 196658, 1, 0, 262194, 1, 0, 327730, 1, 0, 393266, 1, 0, 458802, 1, 0, 524338, 1, 0, 589874, 1, 0, 655410, 1, 0, 720946, 1, 0, 786482, 1, 0, 852018, 1, 0, 917554, 1, 0, 983090, 1, 0, 1048626, 1, 0, 1114162, 1, 0, 1179698, 1, 0, 1245234, 1, 0, 1310770, 1, 0, 1376306, 1, 0, 1441842, 1, 0, 1507378, 1, 0, 1572914, 1, 0, 1638450, 1, 0, 1703986, 1, 0, 1769522, 1, 0, 1835058, 1, 0, 1900594, 1, 0, 1966130, 1, 0, 2031666, 1, 0, 1310734, 1, 0, 65582, 1, 0, 131118, 1, 0, 196654, 1, 0, 458790, 1, 0, 327718, 1, 0, 393254, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 327694, 1, 0, 393230, 1, 0, 458766, 1, 0, 262169, 1, 0, 262168, 1, 0, 786450, 1, 0, 589842, 1, 0, 655378, 1, 0, 720914, 1, 0, 262162, 1, 0, 327698, 1, 0, 393234, 1, 0, 458770, 1, 0, 524306, 1, 0, 524319, 1, 0, 524320, 1, 0, 524321, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 1048615, 1, 0, 1048616, 1, 0, 1048617, 1, 0, 851982, 1, 0, 917518, 1, 0, 983054, 1, 0)
layer_1/name = "Secret"
script = ExtResource("2_iktcb")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(408, 262.333)

[node name="Player" parent="." instance=ExtResource("3_ifcoo")]
position = Vector2(72.3333, 424.333)

[node name="WinArea" parent="." instance=ExtResource("7_ofevf")]
position = Vector2(118.333, 108)

[node name="Collectible" parent="." instance=ExtResource("4_3l0se")]
position = Vector2(200.333, 489)

[node name="Collectible2" parent="." instance=ExtResource("4_3l0se")]
position = Vector2(263.667, 101.667)

[node name="Collectible3" parent="." instance=ExtResource("4_3l0se")]
position = Vector2(391.667, 424.333)

[node name="Collectible4" parent="." instance=ExtResource("4_3l0se")]
position = Vector2(391.667, 231.333)

[node name="Collectible5" parent="." instance=ExtResource("4_3l0se")]
position = Vector2(775, 234)

[node name="PopUp" parent="." instance=ExtResource("6_rpku6")]
visible = false
z_index = 1
offset_left = 408.0
offset_top = 262.333
offset_right = 408.0
offset_bottom = 262.333
scale = Vector2(0.25, 0.25)

[node name="Label" type="Label" parent="PopUp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -478.665
offset_right = 984.0
offset_bottom = 505.335
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_rxaqk")
theme_override_font_sizes/font_size = 75
text = "Great!



You found a 

piece of the 

blueprints!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="PopUp"]
layout_mode = 0
offset_left = -878.667
offset_top = -301.332
offset_right = 1551.33
offset_bottom = 2128.67
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_irlio")

[node name="Counter" type="TextureRect" parent="."]
offset_left = 21.0
offset_top = 21.3333
offset_right = 71.0
offset_bottom = 71.3333
texture = ExtResource("9_irlio")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Count" type="Label" parent="Counter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -7.33333
offset_right = 20.0
offset_bottom = 20.6667
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_dq0ov")
text = "0/5"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Timer" parent="." instance=ExtResource("11_7vdwk")]
offset_left = 80.3333
offset_top = 21.3333
offset_right = 2530.33
offset_bottom = 1601.33
scale = Vector2(0.03, 0.03)

[node name="EndScene" parent="." instance=ExtResource("12_illfs")]
offset_left = 80.3333
offset_top = 21.3333
offset_right = 80.3333
offset_bottom = 21.3333

[connection signal="body_entered" from="WinArea" to="." method="_on_win_area_body_entered"]
[connection signal="win" from="WinArea" to="Player" method="_on_win_area_win"]
[connection signal="win" from="WinArea" to="Timer" method="_on_win_area_win"]
[connection signal="hit" from="Collectible" to="." method="_on_collectible_hit"]
[connection signal="hit" from="Collectible" to="Player" method="_on_collectible_hit"]
[connection signal="hit" from="Collectible" to="Timer" method="_on_collectible_hit"]
[connection signal="hit" from="Collectible2" to="." method="_on_collectible_hit"]
[connection signal="hit" from="Collectible2" to="Player" method="_on_collectible_hit"]
[connection signal="hit" from="Collectible2" to="Timer" method="_on_collectible_hit"]
[connection signal="hit" from="Collectible3" to="." method="_on_collectible_hit"]
[connection signal="hit" from="Collectible3" to="Player" method="_on_collectible_hit"]
[connection signal="hit" from="Collectible3" to="Timer" method="_on_collectible_hit"]
[connection signal="hit" from="Collectible4" to="." method="_on_collectible_hit"]
[connection signal="hit" from="Collectible4" to="Player" method="_on_collectible_hit"]
[connection signal="hit" from="Collectible4" to="Timer" method="_on_collectible_hit"]
[connection signal="hit" from="Collectible5" to="." method="_on_collectible_hit"]
[connection signal="hit" from="Collectible5" to="Player" method="_on_collectible_hit"]
[connection signal="hit" from="Collectible5" to="Timer" method="_on_collectible_hit"]
[connection signal="close" from="PopUp" to="." method="_on_pop_up_close"]
[connection signal="close" from="PopUp" to="Player" method="_on_pop_up_close"]
[connection signal="close" from="PopUp" to="Timer" method="_on_pop_up_close"]
